# PapAIrus

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  README_CN.md  docker-compose.yml  pylint.rc  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
calculations/: arithmetic.py
display/: Makefile  README_DISPLAY.md
display/book_template/: book.json
display/books/: BOOKS.md
display/scripts/: install_nodejs.sh
main_portfolio/: apps.py  tests.py  views.py
main_portfolio/templates/main_portfolio/: index.html
markdown_docs/: llm_refactor_plan.md
markdown_docs/display/book_tools/: generate_repoagent_books.md  generate_summary_from_book.md
markdown_docs/papairus/: change_detector.md  chat_engine.md  file_handler.md  log.md  multi_task_dispatch.md  project_manager.md
markdown_docs/papairus/utils/: gitignore_checker.md  meta_info_utils.md
markdown_docs/repo_agent/: doc_meta_info.md  main.md  runner.md  settings.md
markdown_docs/tests/: test_change_detector.md  test_json_handler.md  test_structure_tree.md
papairus/: change_detector.py  chat_engine.py  chat_engine_latest_version.py  context_gatherer.py  context_gatherer_latest_version.py  doc_meta_info.py  doc_meta_info_latest_version.py  docstring_generator.py  docstring_generator_latest_version.py  documentation_updater.py  exceptions.py  file_handler.py  file_handler_latest_version.py  llm_provider.py  log.py  log_latest_version.py  main.py  markdown_generator.py  markdown_manager.py  multi_task_dispatch.py  project_manager.py  project_manager_latest_version.py  prompt.py  prompt_latest_version.py  runner.py  runner_latest_version.py  settings.py
papairus/chat_with_repo/: __init__.py  __main__.py  gradio_interface.py  json_handler.py  json_handler_latest_version.py  main.py  main_latest_version.py  rag.py  text_analysis_tool.py  text_analysis_tool_latest_version.py  vector_store_manager.py  vector_store_manager_latest_version.py
papairus/llm/backends/: base.py  codegemma.py  gemini.py  local_gemma.py
papairus/utils/: gitignore_checker_latest_version.py  meta_info_utils.py
portfolio_core/: asgi.py  settings.py  urls.py  wsgi.py
repo_agent/: change_detector.py  chat_engine.py  doc_meta_info.py  file_handler.py  log.py  main.py  multi_task_dispatch.py  runner.py  settings.py  setup.cfg
repo_agent/chat_with_repo/: __init__.py  gradio_interface.py  json_handler.py  main.py  rag.py  text_analysis_tool.py  vector_store_manager.py
repo_agent/utils/: gitignore_checker.py  meta_info_utils.py
tests/: conftest.py  conftest_latest_version.py  test_chat_ui_responsiveness.py  test_chat_with_repo_main.py  test_doc_meta_info.py  test_gradio_interface.py  test_llm_provider.py  test_main_cli.py  test_rag.py  test_settings.py  test_text_analysis_tool.py  test_utils.py  test_vector_store_manager.py
tests/integration/: test_chat_ui_responsiveness.py  test_rag_integration.py  test_rag_integration_latest_version.py
tests/unit/: test_chat_with_repo_main.py  test_doc_meta_info.py  test_doc_meta_info_latest_version.py  test_docstring_generator.py  test_exceptions.py  test_exceptions_latest_version.py  test_gradio_interface.py  test_json_handler.py  test_json_handler_latest_version.py  test_llm_backends.py  test_llm_provider.py  test_main_cli.py  test_main_cli_latest_version.py  test_rag.py  test_rag_latest_version.py  test_settings.py  test_utils.py  test_vector_store_manager.py  test_vector_store_manager_latest_version.py
