[project]
name = "portfolio-core"
version = "0.1.0"
description = "A Django-based portfolio website template."
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "MIT"}
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "django>=5.0,<5.1",
    "gunicorn>=21.2.0",
    "whitenoise>=6.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["portfolio_core", "main_portfolio"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-django",
]
